src/prelude/ast/snapshots/serenity__prelude__ast__to_str__test__to_str_for_decl@array.snap
---
source: src/prelude/ast/to_str.rs
expression: result
---
[line    1] Array Declaration: test
[line    1] │    Elem Type: i64
[line    1] │    ├─── Literal: 1
[line    1] │    ╰─── Literal: 1
