src/prelude/ast/snapshots/serenity__prelude__ast__to_str__test__to_str_for_decl@function.snap
---
source: src/prelude/ast/to_str.rs
expression: result
---
[line    1] Function Declaration: test
[line    1] ╰─── Function Expression:
[line    1]      ├─── Name: test
[line    1]      ├─── Return Type: int
[line    1]      ├─── Captures:
[line    1]      │    ╰─── test
[line    1]      ├─── Params:
[line    1]      │    ╰─── test: int
[line    1]      ╰─── Body: 
[line    1]           ╰─── Expression: 
[line    1]                ╰─── Literal: 1
