src/prelude/ast/snapshots/serenity__prelude__ast__to_str__test__to_str_for_expr@binary.snap
---
source: src/prelude/ast/to_str.rs
expression: result
---
[line    1] Binary: Plus
[line    1] ├─── Literal: 1
[line    1] ╰─── Literal: 1
