src/prelude/ast/snapshots/serenity__prelude__ast__to_str__test__to_str_for_expr@ref.snap
---
source: src/prelude/ast/to_str.rs
expression: result
---
[line    1] Ref: 
[line    1] ╰─── Literal: 1
